<resources>
    <string name="app_name">cobonee</string>


    <string name="facebook_app_id" translatable="false">424641284783372</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb424641284783372</string>

    <string name="label_deals">View deals</string>
    <string name="label_cart">Cart</string>
    <string name="label_saved">Archives</string>
    <string name="label_orders">My Orders</string>
    <string name="label_magazine">Cobony Magazine</string>
    <string name="label_profile">Account Details</string>
    <string name="label_info">about us</string>
    <string name="label_settings">Settings</string>
    <string name="label_logout">Logout</string>
    <string name="label_help">Help</string>
    <string name="label_questions">Customer inquiries</string>
    <string name="about_cobonee">About Cobon</string>
    <string name="about_cobonee_text">This is a test text to test the form and size of the text and how it is displayed in this place and the size and color of the font where this text is controlled and the possibility of changing at any time by managing the site</string>
    <string name="contact_cobonee">You can communicate with us by</string>
    <string name="cobonee_phone">01100122101</string>
    <string name="cobonee_email">cobonee@cobone.com</string>
    <string name="text_or">Or</string>
    <string name="text_questions">Click Here</string>
    <string name="text_questions_from">Inquiries form</string>
    <string name="text_send">send</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_subject">Subject</string>
    <string name="text_message">Message</string>
    <string name="text_pass">Password</string>
    <string name="text_forget_pass">Forgot my password ?</string>
    <string name="text_login">Log In</string>
    <string name="text_facebook_login">Log in with Facebook</string>
    <string name="text_register">Create a new account</string>
    <string name="text_en_language">العربية</string>
    <string name="text_details_cobone_type">Choose Coupon Type</string>
    <string name="text_details_advantages_type">Advantages</string>
    <string name="text_details_terms_type">Terms of use</string>
    <string name="text_pass_confirm">Confirm password</string>
    <string name="text_details_owner">About merchant</string>
    <string name="lable_offer_details">Offer details</string>
    <string name="label_search">Search</string>
    <string name="label_payment">payment</string>
    <string name="text_ready_to_use_tab">Ready to use</string>
    <string name="text_expired_tab">Expired</string>
    <string name="label_code_text">Code</string>
    <string name="label_order_quantity_text">Quantity:</string>
    <string name="text_paymentWayTextTv">Choose your payment method</string>
    <string name="text_visa_header">credit cards</string>
    <string name="text_visa_body">Pay with a credit card or prepaid cards</string>
    <string name="text_knet_header">Knt</string>
    <string name="text_knet_body">Pay with a credit card or prepaid cards</string>
    <string name="lable_payment">payment methods</string>
    <string name="lable_visa">credit cards</string>
    <string name="lable_knet">Knt</string>
    <string name="text_profile_mainInfo">basic information</string>
    <string name="text_edit">Edit</string>
    <string name="text_profile_extraInfo">Additional Information</string>
    <string name="text_gender">Gender</string>
    <string name="text_country">Country</string>
    <string name="text_city">City</string>
    <string name="lable_search">Search</string>
    <string name="text_cart_content">Cart Content</string>
    <string name="text_total_cart_content">total cart content</string>
    <string name="text_administrative_cost">Administrative expenses and tax</string>
    <string name="text_total">Total</string>
    <string name="text_money">Pound</string>
    <string name="text_next">Next</string>
    <string name="text_coupon">coupon</string>
    <string name="text_amount">Amount</string>
    <string name="text_recipient">Recipient</string>
    <string name="about_payment_information">payment information</string>
    <string name="text_expiry_date">Expiry date</string>
    <string name="text_first_name">First Name</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_remember_my_information">Remember my information</string>
    <string name="text_send_to_my_latest_deals">Please send to my latest deals in my city</string>
    <string name="text_i_agree">I agree to the</string>
    <string name="text_terms_and_conditions">terms and conditions</string>
    <string name="text_Confirm_order">Confirm Order</string>
    <string name="text_password">Password</string>
    <string-array name="test_array">
        <item>option1</item>
        <item>option2</item>
        <item>option3</item>
        <item>option4</item>
    </string-array>
    <string-array name="month_array">
        <item>MM</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year_array">
        <item>YYYY</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string-array name="language_array">
        <item>English</item>
        <item>العربية</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="payment_completed">Operation Completed Successfully</string>
    <string name="transactions_date">Transactions Date :</string>
    <string name="amount_charged">Amount Charged :</string>
    <string name="result_text">Result :</string>
    <string name="payment_id">Payment ID:</string>
    <string name="reference_no">Reference No:</string>
    <string name="merchant_track_id">Merchant Track ID:</string>
    <string name="questions">Repeated Questions</string>
    <string name="error_offers">Error getting offers</string>
    <string name="no_connection_error">No Internet Connection.</string>
    <string name="error_general">Error happened</string>
    <string name="error_city_or_dept">Error Find City or Department</string>
    <string name="label_discount">discount</string>
    <string name="label_price">%1$s EP</string>
    <string name="text_change_payment">Change payment method</string>
    <string name="text_language">Language</string>
    <string name="text_change_password">Change password</string>
    <string name="text_change_country">Change country</string>
    <string name="addToCart">Add To Cart</string>
    <string name="error_login">Invalid Username or password</string>
    <string name="error_login_empty">Empty username or Password</string>
    <string name="error_email_empty">Empty Email</string>
    <string name="error_code_empty">Empty Code</string>
    <string name="error_pass_empty">Empty Password</string>
    <string name="error_pass_match">Password is not match</string>
    <string name="no_password_match">Password is not match</string>
    <string name="error_save_offer">Not Saved</string>
    <string name="login_success">Login success</string>
    <string name="register_success">Registration Completed Successfully</string>
    <string name="error_register_empty">Please Complete All Fields</string>
    <string name="text_logOut">LogOut</string>
    <string name="error_update_profile">Error Updating Your Profile</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="no_favourites">No Favourite Offers</string>
    <string name="add_to_favourites">Offer Added To Your Favourites</string>
    <string name="remove_from_favourites">Offer Removed From Favourites</string>
    <string name="error_you_must_login">You Must Login First.</string>
    <string name="message_send">Message sent successfully</string>
    <string name="empty_email">Email Empty!</string>
    <string name="empty_name">Name Empty!</string>
    <string name="empty_title">Title Empty!</string>
    <string name="empty_mobile">Mobile Empty!</string>
    <string name="empty_message">Message Empty!</string>
    <string name="hint_search_words">search words</string>
    <string name="error_required_search_text">Search words Required</string>
    <string name="sendEmailMessage">Type your address and we will send you a 4 digits code</string>
    <string name="text_Confirm">Confirm</string>
    <string name="codeMessage">We sent a 4 digits code type it please</string>
    <string name="changePasswordMessage">please type new password.</string>
    <string name="cart_item_added">Coubone added to cart.</string>
    <string name="error_contactUs">Sending Data Falied</string>
    <string name="error_no_offers">No Offers</string>
    <string name="error_no_orders">No Orders</string>
    <string name="loading">Loading...</string>
    <string name="load_failed">Load Failed</string>
    <string name="cart_item_removed">Cart Item Removed</string>
    <string name="create_order_error">Failed To Create Order</string>
    <string name="cart_order_created">Your Order Created Sucessfully</string>


</resources>
