<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.aboutUsFragment.questionsFragment.QuestionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_questions_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_questions_from"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <Spinner
                android:id="@+id/spinner_reason"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/drawer_edittext_background"
                android:gravity="center_vertical|start"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background"
                android:gravity="center_vertical|start"
                android:hint="@string/text_name"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background"
                android:gravity="center_vertical|start"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background"
                android:gravity="center_vertical|start"
                android:hint="@string/text_phone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/edit_subject"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background"
                android:gravity="center_vertical|start"
                android:hint="@string/text_subject"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background"
                android:gravity="top|start"
                android:hint="@string/text_message"
                android:inputType="textMultiLine"
                android:lines="7"
                android:overScrollMode="always"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:padding="15dp"
                android:text="@string/text_send"
                android:textAllCaps="false"
                android:background="@drawable/btn_default_backgroun"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>