<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.forgetPassword.NewPasswordActivity.NewPasswordActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/padlock"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/changePasswordMessage"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="@id/confirmEmail"
        app:layout_constraintStart_toStartOf="@id/confirmEmail"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/text_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <EditText
        android:id="@+id/confirmPasswordEt"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/text_pass_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmEmail"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:text="@string/text_Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEt" />
</androidx.constraintlayout.widget.ConstraintLayout>