<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.auth.registerActivity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/coponee_logo" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/drawer_edittext_background2"
                android:drawableStart="@drawable/ic_for_name"
                android:gravity="center_vertical|start"
                android:hint="@string/text_name"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background2"
                android:drawableStart="@drawable/ic_for_email"
                android:gravity="center_vertical|start"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background2"
                android:drawableStart="@drawable/ic_for_pass"
                android:gravity="center_vertical|start"
                android:hint="@string/text_pass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/edit_pass_confirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawer_edittext_background2"
                android:drawableStart="@drawable/ic_for_pass"
                android:gravity="center_vertical|start"
                android:hint="@string/text_pass_confirm"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:text="@string/text_register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="4dp"
                app:rippleColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="7"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/text_or"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="7"
                    android:background="@android:color/black" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/register"
                app:cornerRadius="4dp"
                app:rippleColor="@color/gray" />

            <TextView
                android:id="@+id/change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/text_en_language"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>